# 2fa-Authenticator-

./: LICENSE  README.md  index.html  manifest.json  sw.js  vercel.json
crypto-core/: asconfig.json  package-lock.json  package.json
crypto-core/assembly/: index.ts
css/: style.css
js/: app.js  backup.js  qr.js  totp.js  ui.js  wallet.js  wasm-loader.js
python/: crypto-cli.py
rust/: Cargo.toml
rust/src/: lib.rs
